--- a/templates/navigation/menu.html.twig
+++ b/templates/navigation/menu.html.twig
@@ -94,7 +94,7 @@
           {% if item_is_collabsible %}
             <button
               type="button"
-              aria-expanded="true"
+              aria-expanded="false"
               aria-controls="menu--level-{{ menu_level + 1 }}"
               aria-labelledby="{{ link_id }}"
               aria-haspopup="true"
