--- a/src/scss/06_components/navigation/_language-switcher.scss
+++ b/src/scss/06_components/navigation/_language-switcher.scss
@@ -1,37 +1,33 @@
-.language-switcher {
-  position: relative;
+.language-link {
+  @include font('small');
+  color: $color-black-90;
+  margin-left: $spacing-half;
+  margin-right: $spacing-half;
+  text-decoration: none;
 
-  .language-link {
-    @include font('small');
-    color: $color-black;
-    margin: 0 $spacing-half;
+  &:hover {
     text-decoration: underline;
+  }
 
-    &:first-child {
-      margin-left: 0;
-    }
+  &:first-child {
+    margin-left: 0;
+  }
 
-    &.is-active {
-      cursor: default;
-      font-weight: $font-weight-bold;
-      text-decoration: none;
-    }
+  &.is-active {
+    border-bottom: 3px solid $color-black-90;
+    cursor: default;
+    font-weight: $font-weight-bold;
+    text-decoration: none;
+  }
 
-    &.is-disabled {
-      color: $color-black-60;
-      cursor: default;
-      text-decoration: none;
-    }
+  &.is-disabled {
+    color: $color-black-60;
+    cursor: default;
+    text-decoration: none;
 
     // TODO: Needs functionality for alternative menu items.
     &.is-alternative {
       display: none;
-    }
-  }
-
-  a {
-    &:hover {
-      text-decoration: none;
     }
   }
 }
