--- a/templates/layout/region--header-top.html.twig
+++ b/templates/layout/region--header-top.html.twig
@@ -14,7 +14,7 @@
 #}
 {% if content %}
   <div{{ attributes.addClass('header-top').setAttribute('id', 'hdbt-header-top').setAttribute('drupal-hdbt-selector', 'hdbt-header-top') }}>
-    <a href="https://hel.fi">Hel.fi</a>
+    <a href="https://hel.fi" class="link-to-site-frontpage">hel.fi</a>
     {{ content }}
   </div>
 {% endif %}
