--- a/templates/navigation/menu--mobile.html.twig
+++ b/templates/navigation/menu--mobile.html.twig
@@ -49,18 +49,30 @@
 
       <li{{ item.attributes.addClass(item_classes) }}>
         {% if not item.is_nolink %}
-          {% set item_title = item.title %}
-          {% set link_attributes = item.is_currentPage ? { 'aria-current': 'page' } : {} %}
+          {% spaceless %}
 
-          {%- set icon_name = (item.url.getOption('attributes')).icon -%}
-          {% if icon_name %}
+            {% set link_attributes = {
+              'class':
+                [
+                  'menu__link',
+                  item.in_active_trail ? 'menu__link--active-trail',
+                  item.is_external ? 'menu__link--external',
+                ],
+              'aria-current': item.is_currentPage ? 'page': null,
+            } %}
+
+            {% set icon_name = (item.url.getOption('attributes')).icon %}
+
             {% set item_title %}
-              {% include '@hdbt/misc/icon.twig' with {icon: icon_name} %}
+              {% if icon_name %}
+                {% include '@hdbt/misc/icon.twig' with {icon: icon_name, class: 'menu__link__icon'} %}
+              {% endif %}
               {{ item.title }}
             {% endset %}
-          {% endif %}
 
-          {{ link(item_title, item.url, link_attributes) }}
+            {{ link(item_title, item.url, link_attributes) }}
+
+          {% endspaceless %}
         {% else %}
           <span{{ create_attribute({'class': item_classes} ) }}>{{ item.title }}</span>
         {% endif %}
