--- a/templates/navigation/menu.html.twig
+++ b/templates/navigation/menu.html.twig
@@ -70,19 +70,23 @@
               {%- set icon_name = (item.url.getOption('attributes')).icon -%}
 
               {%- if icon_name -%}
-                {%- include '@hdbt/misc/icon.twig' with {icon: icon_name, class:'menu__link__icon'} -%}
+                {%- include '@hdbt/misc/icon.twig' with {icon: icon_name, class: 'menu__link__icon'} -%}
               {%- endif -%}<span class="menu__link__text">{{ item.title }}{{ explain_external_icon }}</span>
             {%- endset %}
 
+            {%
+              set classes = [
+                'menu__link',
+                item.in_active_trail ? 'menu__link--active-trail',
+                item.is_external ? 'menu__link--external',
+              ]
+            %}
+
             {% set link_attributes = {
-              'class':
-                [
-                  'menu__link',
-                  item.in_active_trail ? 'menu__link--active-trail',
-                  item.is_external ? 'menu__link--external',
-                ],
-              'id': item_is_collabsible ? link_id,
-              'aria-current': item.is_currentPage ? 'page',
+              'href': item.url,
+              'class': classes,
+              'id': item_is_collabsible ? link_id : null,
+              'aria-current': item.is_currentPage ? 'page' : null,
             } %}
 
             {{ link(item_title, item.url, link_attributes) }}
