UHF-2876: Fix navigation styles and add support for prefers-reduced-motion

--- a/src/scss/02_mixins/__index.scss
+++ b/src/scss/02_mixins/__index.scss
@@ -1,4 +1,6 @@
+@import 'animation_mixins';
 @import 'color_helpers';
 @import 'component_mixins';
+@import 'link_mixins';
 @import 'typography_mixins';
 @import 'mixins';
