--- a/src/scss/06_components/navigation/_header-top-navigation.scss
+++ b/src/scss/06_components/navigation/_header-top-navigation.scss
@@ -26,17 +26,16 @@
     margin-left: $spacing;
   }
 
-  .link-to-site-frontpage,
-  .menu__link {
-    text-decoration: none;
-
-    &:hover {
-      text-decoration: underline;
-    }
+  .link-to-site-frontpage {
+    @include navigation_link_defaults();
   }
 
-  .menu__link--external:after {
-    @include pseudo-icon('link-external');
+
+  .menu__link__text::after {
+    --external-icon-move: translate(1px, -1px);
+    @media (prefers-reduced-motion) {
+      --external-icon-move: scale(1);
+    }
   }
 
   .explain-external-icon {
