--- a/src/scss/06_components/pages/_unit.scss
+++ b/src/scss/06_components/pages/_unit.scss
@@ -570,8 +570,8 @@
     }
 
     .hel-icon {
+      @include hover-link-arrow-transition();
       margin-left: $spacing-half;
-      transition: $hover-link-arrow-transition;
     }
   }
 
@@ -579,6 +579,9 @@
     .unit__read-more {
       .hel-icon {
         transform: translateX($spacing-quarter);
+        @media (prefers-reduced-motion) {
+          transform: none;
+        }
       }
     }
   }
