UHF-2876: Disable external link support from menu until whitelist feature is available

--- a/src/scss/06_components/navigation/_menu.scss
+++ b/src/scss/06_components/navigation/_menu.scss
@@ -8,8 +8,7 @@
 }
 
 .menu__link--external .menu__link__text::after {
-  // TODO: Enable this when external links work in menu
-  // @include pseudo-icon('link-external', calc(var(--line-height) * 1em), currentColor);
+  @include pseudo-icon('link-external', calc(var(--line-height) * 1em), currentColor);
   @include hover-link-arrow-transition();
 }
 
