--- a/templates/navigation/menu.html.twig
+++ b/templates/navigation/menu.html.twig
@@ -48,49 +48,49 @@
       {% set link_id = 'aria-id-' ~ random() %}
       {% set item_is_collabsible = (allow_collabsible and (item.is_collapsed or item.is_expanded)) ? true : false %}
 
+      {% set is_external = item.is_external %}
+      {% set is_external = false %}{# TODO: Once menu supports external link detection with whitelists, remove this override, also in menu--mobile.html.twig #}
+
       {% set item_classes = [
         'menu__item',
         item.is_nolink ? 'menu__item--nolink',
-        item.is_external ? 'menu__item--external',
+        is_external ? 'menu__item--external',
         item.is_expanded or item.in_active_trail ? 'menu__item--children',
         item.in_active_trail ? 'menu__item--active-trail',
         (auto_open and item.in_active_trail) ? 'menu__item--open',
       ]%}
 
       {% set explain_external_icon = null %}
-      {% if item.is_external %}
+      {% if is_external %}
         {% set explain_external_icon %}<span class="explain-external-icon"> ({{ 'Link leads to external service'|t({}, {'context': 'Explanation for screen-reader software that the icon visible next to this link means that the link leads to an external service.'}) }})</span>{% endset %}
       {% endif %}
 
       <li{{ item.attributes.addClass(item_classes) }}>
         <span class="menu__link-wrapper">
           {% if not item.is_nolink %}
-            {% set item_title -%}
+            {% spaceless %}
 
-              {%- set icon_name = (item.url.getOption('attributes')).icon -%}
+              {% set item_title %}
+                {% set icon_name = (item.url.getOption('attributes')).icon %}
+                {% if icon_name %}
+                  {% include '@hdbt/misc/icon.twig' with {icon: icon_name, class: 'menu__link__icon'} %}
+                {% endif %}
+                <span class="menu__link__text">{{ item.title }}{{ explain_external_icon }}</span>
+              {% endset %}
 
-              {%- if icon_name -%}
-                {%- include '@hdbt/misc/icon.twig' with {icon: icon_name, class: 'menu__link__icon'} -%}
-              {%- endif -%}<span class="menu__link__text">{{ item.title }}{{ explain_external_icon }}</span>
-            {%- endset %}
+              {% set link_attributes = {
+                'class': [
+                  'menu__link',
+                  item.in_active_trail ? 'menu__link--active-trail',
+                  is_external ? 'menu__link--external',
+                ],
+                'id': item_is_collabsible ? link_id : null,
+                'aria-current': item.is_currentPage ? 'page' : null,
+              } %}
 
-            {%
-              set classes = [
-                'menu__link',
-                item.in_active_trail ? 'menu__link--active-trail',
-                item.is_external ? 'menu__link--external',
-              ]
-            %}
+              {{ link(item_title, item.url, link_attributes) }}
 
-            {% set link_attributes = {
-              'href': item.url,
-              'class': classes,
-              'id': item_is_collabsible ? link_id : null,
-              'aria-current': item.is_currentPage ? 'page' : null,
-            } %}
-
-            {{ link(item_title, item.url, link_attributes) }}
-
+            {% endspaceless %}
           {% else %}
             <span{{ create_attribute({'class': item_classes}) }}><span class="menu__link__text" id="{{ item_is_collabsible ? link_id }}">{{ item.title }}{{ explain_external_icon }}</span></span>
           {% endif %}
