--- a/templates/navigation/menu.html.twig
+++ b/templates/navigation/menu.html.twig
@@ -56,6 +56,7 @@
         item.is_nolink ? 'menu__item--nolink',
         is_external ? 'menu__item--external',
         item.is_expanded or item.in_active_trail ? 'menu__item--children',
+        item.below ? 'menu__item--item-below',
         item.in_active_trail ? 'menu__item--active-trail',
         (auto_open and item.in_active_trail) ? 'menu__item--open',
       ]%}
