UHF-4235: Remove double external arrow from sidebar text links

--- a/src/scss/06_components/paragraphs/_sidebar-text.scss
+++ b/src/scss/06_components/paragraphs/_sidebar-text.scss
@@ -134,6 +134,10 @@
         order: 3;
       }
 
+      &[data-is-external='true']:after {
+        display: none; // external links have their own icon already
+      }
+
       &:hover {
         text-decoration: underline;
       }
